// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderRelatorioHtml — golden (detecta mudança visual não intencional) > caso completo: rateio, vencimento em alerta, grafico com 13 meses 1`] = `
"<!DOCTYPE html><html lang="pt-BR"><head><meta charset="utf-8"><title>Relatório agosto de 2026</title>
<style>
@page{size:A4;margin:0}
*{box-sizing:border-box;-webkit-print-color-adjust:exact;print-color-adjust:exact}
body{margin:0;font-family:Arial,Helvetica,sans-serif;color:#1f2937;font-size:15px}
.pagina{width:210mm;height:297mm;position:relative;overflow:hidden;page-break-after:always}
.pagina:last-child{page-break-after:auto}
.cab{display:flex;align-items:center;gap:18px;background:#112233;padding:14px 14mm;margin-bottom:12px}
.logo{max-height:95px;max-width:300px;display:block}
.logo-caixa{background:#fff;border-radius:10px;padding:8px 16px;display:flex;align-items:center}
.logo-tenant{max-height:75px;max-width:260px;display:block}
.nome-empresa{font-size:26px;font-weight:bold;color:#fff}
.titulo{font-size:22px;font-weight:bold;color:#fff}
.sub{font-size:15px;color:rgba(255,255,255,.88)}
.conteudo{padding:0 14mm 22mm 14mm}
.cards{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin:10px 0}
.card{border:1px solid #e5e7eb;border-left:6px solid #112233;border-radius:8px;padding:10px 12px}
.rot{font-size:14px;color:#6b7280}.valor{font-size:28px;font-weight:bold}
.frase{font-size:17px;line-height:1.5;background:#f8fafc;border-radius:8px;padding:10px 14px;margin:8px 0}
h2{font-size:18px;color:#112233;margin:10px 0 6px}
.bloco{margin-bottom:8px}
.grafico{height:400px}
table{border-collapse:collapse;width:100%;font-size:14px}th,td{border:1px solid #e5e7eb;padding:5px 8px;text-align:left}th{background:#f1f5f9}
.alerta{font-size:16px;background:#fef3c7;border-left:6px solid #f59e0b;padding:8px 12px;border-radius:6px}
.grande{font-size:16px}.nota{font-size:13px;color:#6b7280}
dl{margin:0;font-size:13.5px}dt{font-weight:bold;margin-top:4px}dd{margin:0 0 2px 0}
.fontes{font-size:11.5px;color:#6b7280;margin-top:6px}
.rod{position:absolute;left:14mm;right:14mm;bottom:8mm;border-top:1px solid #e5e7eb;padding-top:5px;font-size:11px;color:#6b7280}
.conf{margin-top:2px}
</style></head><body>

<div class="pagina">

<header class="cab">
  <div class="nome-empresa">Conquista Solar</div>
  <div class="cab-dir"><div class="titulo">Relatório da sua usina solar</div>
  <div class="sub">JOAO &lt;script&gt;x&lt;/script&gt; · UC 351534 · agosto de 2026</div></div>
</header>
<div class="conteudo">
<div class="cards">
  <div class="card"><div class="rot">☀ Sua usina gerou</div><div class="valor">612 kWh</div></div>
  <div class="card"><div class="rot">🏠 Consumo medido pela concessionária</div><div class="valor">480 kWh</div></div>
  <div class="card"><div class="rot">💰 Economia estimada no mês</div><div class="valor">R$ 376,20</div></div>
  <div class="card"><div class="rot">🔋 Seus créditos guardados</div><div class="valor">1.240 kWh</div></div>
</div>
<p class="frase">Em agosto de 2026 sua usina gerou 612 kWh.</p>
<h2>Últimos meses</h2>
<div class="grafico"><canvas id="g13"></canvas></div>
</div>

<footer class="rod">
  <div>Conquista Solar · (71) 99999-0000 · c@x.com · conquista.com</div>
  <div>JIMENA X — Responsável Técnico</div>
  <div class="conf">Relatório gerado a partir do demonstrativo da concessionária · página 1 de 2</div>
</footer>
</div>

<div class="pagina">

<header class="cab">
  <div class="nome-empresa">Conquista Solar</div>
  <div class="cab-dir"><div class="titulo">Relatório da sua usina solar</div>
  <div class="sub">JOAO &lt;script&gt;x&lt;/script&gt; · UC 351534 · agosto de 2026</div></div>
</header>
<div class="conteudo">
<section class="bloco"><h2>Seus créditos</h2>
<table>
<tr><th>Saldo de créditos</th><td>1.240 kWh</td></tr>
<tr><th>Usados neste mês</th><td>380 kWh</td></tr>
</table>
<p class="alerta">⏰ 50 kWh de créditos vencem em <b>mar/2027</b>. Use antes disso.</p>
</section>


<section class="bloco"><h2>Desempenho da usina</h2>
<p class="grande">Gerou <b>612 kWh</b> de <b>640 kWh</b> esperados
(<b>96%</b>) para uma usina de 5,5 kWp.</p>
<p class="nota">O esperado considera o tamanho da usina, a média de sol da região e os dias do mês. Meses com mais chuva ficam abaixo; é normal variar.</p>
</section>
<section class="bloco"><h2>Para entender</h2><dl>
<dt>Injetado</dt><dd>Energia que a usina mandou para a rede quando gerou mais do que a casa usava naquele momento.</dd>
<dt>Compensado</dt><dd>Créditos usados para abater o consumo da conta no mês.</dd>
<dt>Crédito</dt><dd>Energia injetada que sobrou e fica guardada para os próximos meses. Vale por 60 meses.</dd>
<dt>Rateio</dt><dd>Divisão dos créditos entre as unidades cadastradas, em porcentagem.</dd>
</dl></section>
<div class="fontes"><b>De onde vêm os números:</b><br>Geração: monitoramento da usina (soma dos dias do mês).</div>
</div>

<footer class="rod">
  <div>Conquista Solar · (71) 99999-0000 · c@x.com · conquista.com</div>
  <div>JIMENA X — Responsável Técnico</div>
  <div class="conf">Relatório gerado a partir do demonstrativo da concessionária · página 2 de 2</div>
</footer>
</div>

<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
<script>
(function () {
  var meses = [{"mes":"2026-08-01","rotulo":"ago/2026","geracao":612,"consumo":480,"injetado":222,"compensado":380}];
  new Chart(document.getElementById('g13'), {
    type: 'bar',
    data: {
      labels: meses.map(function (m) { return m.rotulo; }),
      datasets: [
        { label: 'Geração (kWh)', data: meses.map(function (m) { return m.geracao; }), backgroundColor: '#f59e0b' },
        { label: 'Consumo (kWh)', data: meses.map(function (m) { return m.consumo; }), backgroundColor: '#64748b' },
        { label: 'Injetado (kWh)', data: meses.map(function (m) { return m.injetado; }), backgroundColor: '#22c55e' }
      ]
    },
    options: { animation: false, responsive: true, maintainAspectRatio: false,
      plugins: { legend: { labels: { font: { size: 13 } } } },
      scales: { x: { ticks: { font: { size: 12 } } }, y: { beginAtZero: true, ticks: { font: { size: 12 } } } } }
  });
  // Marca dentro da .pagina (altura FIXA, overflow:hidden) — nunca em document.body:
  // lá fora ela somaria altura ao documento e o PDF sairia com 3 páginas.
  document.getElementById('g13').insertAdjacentHTML('afterend', '<span style="font-size:1px;color:#fff">grafico-ok</span>');
})();
</script>
<script>
(function () {
  document.querySelectorAll('.pagina').forEach(function (pag) {
    var conteudo = pag.querySelector('.conteudo');
    var rod = pag.querySelector('.rod');
    if (!conteudo || !rod) return;
    var fundoConteudo = conteudo.getBoundingClientRect().bottom;
    var topoRodape = rod.getBoundingClientRect().top;
    if (fundoConteudo > topoRodape) {
      pag.insertAdjacentHTML('afterbegin', '<div style="color:red;font-size:10px">CONTEUDO-CORTADO</div>');
    }
  });
})();
</script>
</body></html>"
`;

exports[`renderRelatorioHtml — golden (detecta mudança visual não intencional) > caso minimo: sem meses/grafico, sem rateio, sem vencimento, sem desempenho 1`] = `
"<!DOCTYPE html><html lang="pt-BR"><head><meta charset="utf-8"><title>Relatório agosto de 2026</title>
<style>
@page{size:A4;margin:0}
*{box-sizing:border-box;-webkit-print-color-adjust:exact;print-color-adjust:exact}
body{margin:0;font-family:Arial,Helvetica,sans-serif;color:#1f2937;font-size:15px}
.pagina{width:210mm;height:297mm;position:relative;overflow:hidden;page-break-after:always}
.pagina:last-child{page-break-after:auto}
.cab{display:flex;align-items:center;gap:18px;background:#112233;padding:14px 14mm;margin-bottom:12px}
.logo{max-height:95px;max-width:300px;display:block}
.logo-caixa{background:#fff;border-radius:10px;padding:8px 16px;display:flex;align-items:center}
.logo-tenant{max-height:75px;max-width:260px;display:block}
.nome-empresa{font-size:26px;font-weight:bold;color:#fff}
.titulo{font-size:22px;font-weight:bold;color:#fff}
.sub{font-size:15px;color:rgba(255,255,255,.88)}
.conteudo{padding:0 14mm 22mm 14mm}
.cards{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin:10px 0}
.card{border:1px solid #e5e7eb;border-left:6px solid #112233;border-radius:8px;padding:10px 12px}
.rot{font-size:14px;color:#6b7280}.valor{font-size:28px;font-weight:bold}
.frase{font-size:17px;line-height:1.5;background:#f8fafc;border-radius:8px;padding:10px 14px;margin:8px 0}
h2{font-size:18px;color:#112233;margin:10px 0 6px}
.bloco{margin-bottom:8px}
.grafico{height:400px}
table{border-collapse:collapse;width:100%;font-size:14px}th,td{border:1px solid #e5e7eb;padding:5px 8px;text-align:left}th{background:#f1f5f9}
.alerta{font-size:16px;background:#fef3c7;border-left:6px solid #f59e0b;padding:8px 12px;border-radius:6px}
.grande{font-size:16px}.nota{font-size:13px;color:#6b7280}
dl{margin:0;font-size:13.5px}dt{font-weight:bold;margin-top:4px}dd{margin:0 0 2px 0}
.fontes{font-size:11.5px;color:#6b7280;margin-top:6px}
.rod{position:absolute;left:14mm;right:14mm;bottom:8mm;border-top:1px solid #e5e7eb;padding-top:5px;font-size:11px;color:#6b7280}
.conf{margin-top:2px}
</style></head><body>

<div class="pagina">

<header class="cab">
  <div class="nome-empresa">Conquista Solar</div>
  <div class="cab-dir"><div class="titulo">Relatório da sua usina solar</div>
  <div class="sub">JOAO &lt;script&gt;x&lt;/script&gt; · UC 351534 · agosto de 2026</div></div>
</header>
<div class="conteudo">
<div class="cards">
  <div class="card"><div class="rot">☀ Sua usina gerou</div><div class="valor">612 kWh</div></div>
  <div class="card"><div class="rot">🏠 Consumo medido pela concessionária</div><div class="valor">480 kWh</div></div>
  <div class="card"><div class="rot">💰 Economia estimada no mês</div><div class="valor">R$ 376,20</div></div>
  <div class="card"><div class="rot">🔋 Seus créditos guardados</div><div class="valor">1.240 kWh</div></div>
</div>
<p class="frase">Em agosto de 2026 sua usina gerou 612 kWh.</p>
<h2>Últimos meses</h2>
<p class="nota">Histórico dos meses não disponível neste demonstrativo.</p>
</div>

<footer class="rod">
  <div>Conquista Solar · (71) 99999-0000 · c@x.com · conquista.com</div>
  <div>JIMENA X — Responsável Técnico</div>
  <div class="conf">Relatório gerado a partir do demonstrativo da concessionária · página 1 de 2</div>
</footer>
</div>

<div class="pagina">

<header class="cab">
  <div class="nome-empresa">Conquista Solar</div>
  <div class="cab-dir"><div class="titulo">Relatório da sua usina solar</div>
  <div class="sub">JOAO &lt;script&gt;x&lt;/script&gt; · UC 351534 · agosto de 2026</div></div>
</header>
<div class="conteudo">
<section class="bloco"><h2>Seus créditos</h2>
<table>
<tr><th>Saldo de créditos</th><td>1.240 kWh</td></tr>
<tr><th>Usados neste mês</th><td>380 kWh</td></tr>
</table>

</section>


<section class="bloco"><h2>Para entender</h2><dl>
<dt>Injetado</dt><dd>Energia que a usina mandou para a rede quando gerou mais do que a casa usava naquele momento.</dd>
<dt>Compensado</dt><dd>Créditos usados para abater o consumo da conta no mês.</dd>
<dt>Crédito</dt><dd>Energia injetada que sobrou e fica guardada para os próximos meses. Vale por 60 meses.</dd>
<dt>Rateio</dt><dd>Divisão dos créditos entre as unidades cadastradas, em porcentagem.</dd>
</dl></section>
<div class="fontes"><b>De onde vêm os números:</b><br>Geração: monitoramento da usina (soma dos dias do mês).</div>
</div>

<footer class="rod">
  <div>Conquista Solar · (71) 99999-0000 · c@x.com · conquista.com</div>
  <div>JIMENA X — Responsável Técnico</div>
  <div class="conf">Relatório gerado a partir do demonstrativo da concessionária · página 2 de 2</div>
</footer>
</div>

<script>
(function () {
  document.querySelectorAll('.pagina').forEach(function (pag) {
    var conteudo = pag.querySelector('.conteudo');
    var rod = pag.querySelector('.rod');
    if (!conteudo || !rod) return;
    var fundoConteudo = conteudo.getBoundingClientRect().bottom;
    var topoRodape = rod.getBoundingClientRect().top;
    if (fundoConteudo > topoRodape) {
      pag.insertAdjacentHTML('afterbegin', '<div style="color:red;font-size:10px">CONTEUDO-CORTADO</div>');
    }
  });
})();
</script>
</body></html>"
`;
